# fast_zero

./: .gitignore  README.md  dockerfile  pyproject.toml
fast_zero/: app.py  schemas.py  security.py
fast_zero/routes/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 0e008926806c_create_users_table.py  aaed56c0f47d_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
